// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildMailOptions build mail options for a html email 1`] = `
Object {
  "from": "The National Lottery Community Fund <noreply@tnlcommunityfund.org.uk>",
  "html": <p>
  This is a test
</p>,
  "subject": "Test",
  "text": "This is a test",
  "to": Array [
    Object {
      "address": "example@example.com",
    },
  ],
}
`;

exports[`buildMailOptions build mail options for a text email 1`] = `
Object {
  "from": "The National Lottery Community Fund <noreply@tnlcommunityfund.org.uk>",
  "subject": "Test",
  "text": "This is a test",
  "to": Array [
    Object {
      "address": "example@example.com",
    },
  ],
}
`;

exports[`buildMailOptions build mail options for a text email with a name 1`] = `
Object {
  "from": "The National Lottery Community Fund <noreply@tnlcommunityfund.org.uk>",
  "subject": "Test",
  "text": "This is a test",
  "to": Array [
    Object {
      "address": "example@example.com",
      "name": "Example Person",
    },
  ],
}
`;

exports[`buildMailOptions build mail options for an internal html email 1`] = `
Object {
  "from": "The National Lottery Community Fund <noreply@blf.digital>",
  "html": <p>
  This is a test
</p>,
  "subject": "Test",
  "text": "This is a test",
  "to": Array [
    Object {
      "address": "example@biglotteryfund.org.uk",
    },
  ],
}
`;

exports[`buildMailOptions handle multiple send to addresses 1`] = `
Object {
  "from": "The National Lottery Community Fund <noreply@blf.digital>",
  "subject": "Test",
  "text": "This is a test",
  "to": Array [
    Object {
      "address": "example@biglotteryfund.org.uk",
    },
    Object {
      "address": "example@blah.com",
    },
  ],
}
`;

exports[`generateHtmlEmail generate html email content 1`] = `
<h1>
  Test email
</h1>
<p>
  Example data
</p>
`;

exports[`sendEmail create a html email response to be sent 1`] = `
"TEST EMAIL
Example data"
`;

exports[`sendEmail create a html email response to be sent 2`] = `
<h1>
  Test email
</h1>
<p>
  Example data
</p>
`;

exports[`sendHTMLEmail create an html email response and send it 1`] = `
"TEST EMAIL
Example data"
`;

exports[`sendHTMLEmail create an html email response and send it 2`] = `
<h1>
  Test email
</h1>
<p>
  Example data
</p>
`;
